# link-intersection-brute-force

./: .gitignore  CMakeLists.txt  LICENSE  README.md  model.config  package.xml
include/link-intersection-brute-force/: EigenMeshModel.h  StlWriter.h  TypedLog.h
launch/: gazebo.launch.py  link-intersection-brute-force.py
meshes/: px150_3_upper_arm_coll.stl  px150_8_gripper_bar_coll.stl
meshes/px150_meshes/: px150_1_base_coll.stl  px150_2_shoulder_coll.stl  px150_4_forearm_coll.stl  px150_5_wrist_coll.stl  px150_6_gripper_coll.stl  px150_7_gripper_prop_coll.stl  px150_9_gripper_finger_coll.stl
src/: DumpModel.cpp  DumpModel.h  EigenMeshModel.cpp  EigenMeshModel.h  StlWriter.cpp  gazebo-plugin.cpp  main-node.cpp
tmp/: first.cpp  first.cu
todo/: kigyo.py
urdf/: forbidden-links.txt  px150_coll.sdf  px150_coll.urdf  px150_coll.urdf.xacro
